--- a/index.html
+++ b/index.html
@@ -335,20 +335,20 @@
 								<div class="resume-skill-item">
 									<h4 class="resume-skills-cat font-weight-bold">Outras</h4>
 									<ul class="list-inline">
-										<li class="list-inline-item"><span class="badge badge-light">DevOps</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Code Review</span>
+										<li class="list-inline-item"><span class="badge badge-light">Frontend</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">FullStack</span>
 										</li>
-										<li class="list-inline-item"><span class="badge badge-light">Git</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Unit Testing</span>
+										<li class="list-inline-item"><span class="badge badge-light">Backend</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Figma</span>
 										</li>
-										<li class="list-inline-item"><span class="badge badge-light">Wireframing</span>
+										<li class="list-inline-item"><span class="badge badge-light">Canva</span>
 										</li>
-										<li class="list-inline-item"><span class="badge badge-light">Sketch</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Balsamiq</span>
+										<li class="list-inline-item"><span class="badge badge-light">MongoDB</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">MySQL</span>
 										</li>
-										<li class="list-inline-item"><span class="badge badge-light">WordPress</span>
+										<li class="list-inline-item"><span class="badge badge-light">Planilha</span>
 										</li>
-										<li class="list-inline-item"><span class="badge badge-light">Shopify</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Scrum</span></li>
 									</ul>
 								</div>
 							</div>
