--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <head>
-	<title>Steve Doe: Mapa de Carreira</title>
+	<title>Gabriel de Oliveira: Mapa de Carreira</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
